Fixed gameover text being behind the pipes

--- a/games/pigeon/pigeon.css
+++ b/games/pigeon/pigeon.css
@@ -72,6 +72,7 @@
 
 #gameover {
     color: red;
+    z-index: 100;
 }
 
 #prestart {
